--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,13 +6,13 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #2e4885;
+  --ifm-color-primary-dark: #293078;
+  --ifm-color-primary-darker: rgb(39, 66, 113);
+  --ifm-color-primary-darkest: #20255d;
+  --ifm-color-primary-light: #333b92;
+  --ifm-color-primary-lighter: #353f99;
+  --ifm-color-primary-lightest: #3c3ead;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
