--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -4,6 +4,18 @@
  * work well for content-centric websites.
  */
 
+@font-face {
+  font-family: 'Bordini';
+  src: url('fonts/Wellfleet/Wellfleet-Regular.ttf') format('ttf');
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* Apply Bordini font to all elements */
+html, body {
+  font-family: 'Bordini';
+}
+
 /* You can override the default Infima variables here. */
 :root {
   --ifm-color-primary: #2e4885;
@@ -28,4 +40,20 @@
   --ifm-color-primary-lightest: #4fddbf;
   --ifm-code-font-size: 90%; /*95%;*/
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+}
+body {
+}
+li {
+  float: center;
+  font-size: 21px!important;
+  font-weight: bold;
+  color:#ff8585!important;
+}
+
+h1, h2, h3, h4, h5 {
+  color: #86fce2;
+}
+
+a {
+  color: rgb(255, 238, 0);
 }
