--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -2,6 +2,9 @@
  * CSS files with the .module.css suffix will be treated as CSS modules
  * and scoped locally.
  */
+ @tailwind base;
+@tailwind components;
+@tailwind utilities;
 .heroBanner {
   padding: 4rem 0;
   text-align: center;
@@ -19,4 +22,17 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+@keyframes slide-down {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.animate-slide-down {
+  background-color: red!important;
+  animation: slide-down 0.5s ease-out;
 }
