--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -18,40 +18,44 @@ html, body {
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e4885;
-  --ifm-color-primary-dark: #293078;
-  --ifm-color-primary-darker: rgb(39, 66, 113);
+  --ifm-color-primary: #406fdb;
+  --ifm-color-primary-dark: #3643ca;
+  --ifm-color-primary-darker: rgb(19, 57, 122);
   --ifm-color-primary-darkest: #20255d;
   --ifm-color-primary-light: #333b92;
-  --ifm-color-primary-lighter: #353f99;
-  --ifm-color-primary-lightest: #3c3ead;
+  --ifm-color-primary-lighter: #6a75d8;
+  --ifm-color-primary-lightest: #7f80da;
   --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --docusaurus-highlighted-code-line-bg: rgb(255, 153, 0);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #0073ff;
-  --ifm-color-primary-dark: #0250b0;
-  --ifm-color-primary-darker: #00408f;
-  --ifm-color-primary-darkest: #002b60;
+  --ifm-color-primary: #1b57a1;
+  --ifm-color-primary-dark: #0b4284;
+  --ifm-color-primary-darker: #0c305d;
+  --ifm-color-primary-darkest: #001a3a;
   --ifm-color-primary-light: #2989ff;
   --ifm-color-primary-lighter: #7ab6ff;
   --ifm-color-primary-lightest: #c1ddff;
   --ifm-code-font-size: 90%; /*95%;*/
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --docusaurus-highlighted-code-line-bg: rgb(255, 191, 0);
 }
 li {
   font-size: 25px!important;
   font-weight: bold;
-  color:#ff8585!important;
+  color:#ffb96eb5!important;
+  margin-left: -10px!important;
 }
 li li {
   font-size: 21px!important;
   color:#b3a5a5!important;
+  margin: 0!important;
  text-align: left;
 }
-
+h1, h2, h3 {
+  text-align: start;
+}
 p{
   font-size:21px;
   color: #a0a0a0;
@@ -59,10 +63,7 @@ p{
 a {
   color: rgb(98, 171, 255);
 }
-h1,h2,h3{
- margin-left: 4rem;
 
-}
 body article {
   text-align: center; 
   width: 100% !important;
