--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -74,3 +74,21 @@ body article {
 strong {
   color: rgb(255, 194, 88);
 }
+
+.chapter {
+  margin-bottom: 20px;
+}
+
+.chapter h2 {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
+
+.chapter ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+
+.chapter li {
+  margin-bottom: 5px;
+}
